# travel_planning_chatbot

./: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml
scripts/: docker_chroma.py
src/: config.py
src/agent/: prompts.py  travel_agent.py
src/tools/: schemas.py  tools.py  wether_api.py
src/utils/: text_processing.py
src/vector_search/: document_processor.py  vector_store.py
ui/: Dockerfile  README.md  main.py  requirements.txt  simple_streamlit_app.py  streamlit_app.py
